[package]
name = "otel-instrument"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Instrument macro for opentelemetry"
repository = "https://github.com/ozwaldorf/otel-instrument"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }


[dev-dependencies]
opentelemetry = "0.30"
opentelemetry-semantic-conventions = "0.30"
tokio = { version = "1.0", features = ["rt", "macros"] }
