[package]
name = "otel-instrument"
version = "0.1.7"
edition = "2024"
license = "MIT"
description = "Instrument macro for opentelemetry"
repository = "https://github.com/ozwaldorf/otel-instrument"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
opentelemetry = "0.30"
opentelemetry-otlp = { version = "0.30" }
opentelemetry-semantic-conventions = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["trace"] }
tokio = { version = "1.0", features = ["rt", "macros"] }
eyre = "0.6"
thiserror = "2.0"
